--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,17 @@
 extends layout
 
-block content
-	each product in mainProducts
-		.product
-			h1(class="blue")= product.name
-			if product.sale
-				p SALE
-				p old price #{product.oldPrice}
-			p PRICE #{product.price}
-			img(src= product.image)
+//- block content
+block header
+	include header/index
+	//- .search-div
+	//- 	img.search-img(src="/images/assets/magnifying-glass-browser.png")
+	//- 	p.field 
+	//- 		input(type="search" name="field" id="search" placeholder="Поиск по сайту..")
+	//- //- each product in mainProducts//- 
+	//- 	.product
+	//- 		h1(class="blue")= product.name
+	//- 		if product.sale
+	//- 			p SALE
+	//- 			p old price #{product.oldPrice}
+	//- 		p PRICE #{product.price}
+	//- 		img(src= product.image)
