--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,10 @@
-doctype html
 html
 	head
+		meta(charset="UTF-8")
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
 	body
-		block content
+		//- block content
+		block header
+		script(src="/js/bundle.js")
