--- a/src/sass/header/header.scss
+++ b/src/sass/header/header.scss
@@ -26,8 +26,13 @@
 		display: inline-block;
 		padding-right: 30px;
 		position: relative;
+		transition: 0.6s;
 			&:last-child{
 				padding-right: 0px;
+			}
+			&:hover{
+				transform: translateY(-10px);
+				transition: 0.6s;
 			}
 			&:hover > .header__submenu{
 					visibility: visible;
