add menu fix and carousel

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,18 +3,4 @@
 @import 'helpers/mixins';
 @import 'helpers/layouts';
 @import 'blocks';
-
-// .search-div{
-// 	margin-top:20px;
-// }
-
-// .search-img{
-// 	width: 20px;
-// 	height: 20px;
-// 	cursor: pointer;
-// 	float: left;
-// }
-
-// .field {
-// 	display: none;
-// }
+@import 'modules/index';
