--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,10 @@ html
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,900" rel="stylesheet">
 	body
+		#sprites(style="display: none")
+			include symbol/svg/sprite.symbol.svg
 		//- block content
 		block header
 		script(src="/js/bundle.js")
