--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,11 @@ extends layout
 //- block content
 block header
 	include header/index
+	include pluses/index
+
+
+
+
 	//- .search-div
 	//- 	img.search-img(src="/images/assets/magnifying-glass-browser.png")
 	//- 	p.field 
