--- a/views/header/header.pug
+++ b/views/header/header.pug
@@ -7,10 +7,9 @@ mixin menu-item(title, arr)
 					li.header__submenu-item
 						a.header__submenu-link(href="#")=val
 
-//- p= data
+
 .header
-	.header__wrapper
-		
+	.header__wrapperHeader
 		.header__fixflex
 			.header__logo
 				a(href="#")
@@ -35,13 +34,14 @@ mixin menu-item(title, arr)
 					svg.header__search
 						use(xlink:href="#magnifying-glass")
 		.search-click
-			img.search__logo(src="./images/assets/BeProBlack.png")
-			svg.search__icon
-				use(xlink:href="#magnifying-glass")
-			input.search-input(type="search" placeholder="Поиск по сайту..")
-			a.search-link(href="#")
-				svg.header__search-close
-					use(xlink:href="#cancel")
+			.search
+				img.search__logo(src="./images/assets/BePro.black2.png")
+				svg.search__icon
+					use(xlink:href="#magnifying-glass")
+				input.search-input(type="search" placeholder="Поиск по сайту..")
+				a.search-link(href="#")
+					svg.header__search-close
+						use(xlink:href="#cancel")
 
 
 
