--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,8 @@ extends layout
 block header
 	include header/index
 	include pluses/index
-
-
+block product
+	include product/index
 
 
 	//- .search-div
