--- a/src/sass/header/Carousel.scss
+++ b/src/sass/header/Carousel.scss
@@ -33,17 +33,16 @@
 	position: relative;
 	&__img {
 		width: 100%;
-	} // &__item{
-	// 	position:relative;
-	// }
+		height: 992px;
+	}
 	&__caption {
 		font-family: $playfair;
 		font-weight: 700;
 		font-size: 99px;
 		position: absolute;
 		color: #fff;
-		margin: 0px; // text-align: center;
+		margin: 0px;
 		top: 50%;
-		padding: 0px 665px; // left: 678px;
+		padding: 0px 665px;
 	}
 }
