Slider header fix

--- a/views/product/product.pug
+++ b/views/product/product.pug
@@ -53,6 +53,6 @@ mixin newProducts(head, name, price, image)
 	.load-more.center
 		a.load-more__link(href="#")
 			.load-more__img
-				svg.load-more__svg
+				svg.load-more__svg.loader_animate
 					use(xlink:href="#circle-of-two-clockwise-arrows-rotation")
 			.load-more__text load more
