--- a/src/sass/header/Carousel.scss
+++ b/src/sass/header/Carousel.scss
@@ -41,8 +41,11 @@
 		font-size: 99px;
 		position: absolute;
 		color: #fff;
-		margin: 0px;
-		top: 50%;
-		padding: 0px 665px;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 }
