--- a/src/sass/product/product.scss
+++ b/src/sass/product/product.scss
@@ -204,3 +204,16 @@
 		letter-spacing: 2;
 	}
 }
+
+@keyframes rotate {
+	0%{
+		transform: rotate(0turn)
+	}
+	100%{
+		transform: rotate(1turn)
+	}
+}
+
+.loader_animate{
+	animation: rotate 1.5s infinite linear;
+}
