add event slider, fix layout, markup for hotProducts

--- a/views/eventSlider/eventSlider.pug
+++ b/views/eventSlider/eventSlider.pug
@@ -1,1 +1,5 @@
-eventSlider.scss
+include ../mixins/eventSlider
+
+.event.owl-carousel
+	each slider in eventSlider
+		+eventSlider(slider.description, slider.date, slider.type, slider.image )
