--- a/src/sass/eventSlider/eventSlider.scss
+++ b/src/sass/eventSlider/eventSlider.scss
@@ -1,1 +1,64 @@
-eventSlier.scss
+// .event{
+// 	position: relative;
+// 	width: 100%;
+// }
+.eventSlider {
+	&__item{
+		position: relative;
+	}
+	&__image {
+		width: 100%;
+	}
+	&__container{
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		color:#fff;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+}
+	&__type {
+		font-family: $montserrat;
+		font-weight: 500;
+		font-size: 16px;
+		text-transform: uppercase;
+		letter-spacing: 2;
+	}
+	&__description {
+		font-family: $playfair;
+		font-weight: 00;
+		font-size: 36px;
+		margin-top: 30px;
+	}
+	&__date {
+		font-family: $montserrat;
+		font-weight: 500;
+		font-size: 16px;
+		margin-top: 15px;
+	}
+}
+.owl-dots{
+	position: absolute;
+		left: 0;
+		right: 0;
+		display: flex;
+		justify-content: center;
+		bottom: 55px;
+}
+.owl-dot {
+	width: 10px;
+	height: 10px;
+	background: #999999;
+	border-radius: 50%;
+	display: inline-block;
+	margin-right: 15px;
+	}
+
+
+.owl-dot.active{
+	background: #fff;
+}
