--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,13 +1,13 @@
 html
 	head
 		meta(charset="UTF-8")
-		title= title
-		link(rel='stylesheet', href='/stylesheets/style.css')
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,900" rel="stylesheet">
+		block title
+		block styles
+		meta(name="viewport" content="width=device-width, initial-scale=1")
 	body
 		#sprites(style="display: none")
 			include symbol/svg/sprite.symbol.svg
 		block header
-		block product
-		script(src="/js/bundle.js")
+		block main
+		block footer
+		block scripts
