added 'populars slider' and 'ad'

--- a/src/sass/_blocks.scss
+++ b/src/sass/_blocks.scss
@@ -2,3 +2,5 @@
 @import './pluses/index';
 @import './product/index';
 @import './eventSlider/index';
+@import './populars/index';
+@import './hotProducts/index';
