--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,7 @@ block main
 	include product/index
 	include eventSlider/index
 	include hotProducts/index
+	include populars/index
 block footer
 	.footer
 block scripts
