--- a/src/sass/hotProducts/hotProducts.scss
+++ b/src/sass/hotProducts/hotProducts.scss
@@ -1,1 +1,44 @@
-hotProducts.scss
+.wrapper{
+	@extend %wrapper;
+	margin-top: 30px;
+}
+.hotProducts{
+	display: flex;
+	justify-content: space-between;
+}
+.hotProduct {
+	position: relative;
+	&__container {
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		color: #fff;
+		text-align: left;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		padding-left: 65px;
+		max-width: 400px;
+	}
+	&__category{
+		font-family: $montserrat;
+		font-weight: 500;
+		font-size: 14px;
+		text-transform: uppercase;
+		letter-spacing: 2;
+	}
+	&__name{
+		font-family: $playfair;
+		font-weight: 700;
+		font-size: 30px;
+		margin-top: 20px;
+	}
+	&__price{
+	font-family: $montserrat;
+	font-weight: 700;
+	font-size: 14px;
+	margin-top: 50px;
+	}
+}
