add sliderLogo and footer

--- a/src/sass/_blocks.scss
+++ b/src/sass/_blocks.scss
@@ -4,3 +4,5 @@
 @import './eventSlider/index';
 @import './populars/index';
 @import './hotProducts/index';
+@import './sliderLogo/index';
+@import './footer/index';
