--- a/views/index.pug
+++ b/views/index.pug
@@ -13,8 +13,9 @@ block main
 	include eventSlider/index
 	include hotProducts/index
 	include populars/index
+	include sliderLogo/index
 block footer
-	.footer
+	include footer/index
 block scripts
 	script(src="/js/bundle.js")
 
