--- a/views/footer/footer.pug
+++ b/views/footer/footer.pug
@@ -1,6 +1,6 @@
 
 .footer
-	.wrapperHeader
+	.wrapper_sm
 		.footer__container
 			img.footer__logo(src="/images/assets/ModaX.png")
 			ul.footer__menu
