--- a/views/header/Carousel.pug
+++ b/views/header/Carousel.pug
@@ -1,8 +1,7 @@
 mixin slides(title, image)
-	.main-slider__item
-		img.main-slider__img(src= image)
+	.main-slider__item(style=`background-image:url("${image}")`)
 		h1.main-slider__caption=title
-	
-.main-slider.owl-carousel
-	each slide in indexSlider
-		+slides(slide.header, slide.image )
+.main-slider
+	.main-slider__container.owl-carousel
+		each slide in indexSlider
+			+slides(slide.header, slide.image )
