--- a/src/sass/footer/footer.scss
+++ b/src/sass/footer/footer.scss
@@ -1,6 +1,3 @@
-.wrapperHeader{
-	@extend %wrapperHeader;
-}
 .footer{
 	background: #000;
 	padding: 40px;
@@ -41,6 +38,7 @@
 	&__description{
 		font-weight: 500;
 		margin-top: 35px;
+		font-size: 13;
 	}
 	&__cards{
 		margin-top: 45px;
@@ -65,6 +63,7 @@
 		width: 15px;
 		height: 15px;
 		fill: #999999;
+		transition: 0.3s;
 		&:hover{
 			fill: #fff;
 		}
