--- a/src/sass/header/Carousel.scss
+++ b/src/sass/header/Carousel.scss
@@ -29,11 +29,19 @@
 }
 
 .main-slider {
-	width: 100%;
-	position: relative;
-	&__img {
+	height: 1241px;
+	background: #adadad;
+	&__container {
 		width: 100%;
-		height: 992px;
+		position: relative;
+	}
+	&__item {
+		width: 100%;
+		min-height: 1241px;
+		background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: 50% 50%;
+
 	}
 	&__caption {
 		font-family: $playfair;
