--- a/src/sass/header/header.scss
+++ b/src/sass/header/header.scss
@@ -20,17 +20,16 @@
 		left: 0;
 		background: linear-gradient(to bottom, rgba(0, 0, 0, 0.38) 0%, rgba(0, 0, 0, 0) 100%);
 	}
-	&__wrapperHeader{
-		@extend %wrapperHeader;
+	&__logo {
+    display: inline-block;
+    margin-right: 100px;
 	}
-	&__fixflex {
+	&__container {
 		display: flex;
 		justify-content: space-between;
-		padding: 0;
-		margin: 0;
 		align-items: center;
 	}
-	&__fixblock {
+	&__actions {
 		align-items: center;
 		display: inline-flex;
 	}
