--- a/views/header/header.pug
+++ b/views/header/header.pug
@@ -7,8 +7,8 @@ mixin menu-item(title, arr)
 					li.header__submenu-item
 						a.header__submenu-link(href="#")=val
 .header
-	.header__wrapperHeader
-		.header__fixflex
+	.header__container.wrapper_sm
+		.header__align-left
 			.header__logo
 				a(href="#")
 					img(src="./images/assets/BePro.png")
@@ -19,27 +19,27 @@ mixin menu-item(title, arr)
 				+menu-item('page', ['kek', 'lol'])
 				+menu-item('blog', ['kek', 'lol'])
 				+menu-item('elements', ['kek', 'lol'])
-			.header__fixblock
-				ul.header__menu-registry
-					li.header__user-menu-item
-						a.header__menu-link(href="#") log in
-					li.header__user-menu-item
-						a.header__menu-link(href="#") sign up
-				a.header__bag-link(href="#")
-					svg.header__bag
-						use(xlink:href="#hand-bag")
-				a.search-link(href="#")
-					svg.header__search
-						use(xlink:href="#magnifying-glass")
-		.search-click
-			.search
-				img.search__logo(src="./images/assets/BePro.black2.png")
-				svg.search__icon
+		.header__actions
+			ul.header__menu-registry
+				li.header__user-menu-item
+					a.header__menu-link(href="#") log in
+				li.header__user-menu-item
+					a.header__menu-link(href="#") sign up
+			a.header__bag-link(href="#")
+				svg.header__bag
+					use(xlink:href="#hand-bag")
+			a.search-link(href="#")
+				svg.header__search
 					use(xlink:href="#magnifying-glass")
-				input.search-input(type="search" placeholder="Поиск по сайту..")
-				a.search-link(href="#")
-					svg.header__search-close
-						use(xlink:href="#cancel")
+	.search-click
+		.search
+			img.search__logo(src="./images/assets/BePro.black2.png")
+			svg.search__icon
+				use(xlink:href="#magnifying-glass")
+			input.search-input(type="search" placeholder="Поиск по сайту..")
+			a.search-link(href="#")
+				svg.header__search-close
+					use(xlink:href="#cancel")
 
 
 
