Добавляет pug в структуру проекта

--- a/views/footer/footer.pug
+++ b/views/footer/footer.pug
@@ -2,7 +2,7 @@
 .footer
 	.wrapper_sm
 		.footer__container
-			img.footer__logo(src="/images/assets/ModaX.png")
+			img.footer__logo(src="./public/images/assets/ModaX.png")
 			ul.footer__menu
 				a.footer__link(href="#")
 					li.footer__item man
@@ -18,11 +18,11 @@
 				.footer__caption contact us
 				.footer__description San Francisco, California 400 Castro St, San Francisco, CA (+1) 686-868-9999
 				.footer__cards
-					img.footer__card(src="/images/assets/card1.png")
-					img.footer__card(src="/images/assets/card2.png")
-					img.footer__card(src="/images/assets/card3.png")
-					img.footer__card(src="/images/assets/card4.png")
-					img.footer__card(src="/images/assets/card5.png")
+					img.footer__card(src="./public/images/assets/card1.png")
+					img.footer__card(src="./public/images/assets/card2.png")
+					img.footer__card(src="./public/images/assets/card3.png")
+					img.footer__card(src="./public/images/assets/card4.png")
+					img.footer__card(src="./public/images/assets/card5.png")
 			.footer__social
 				a.footer__linkSoc(href="#")
 					svg.footer__socItem
