--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 block title
 	title=title
 block styles
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='./public/stylesheets/style.css')
 		link(href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600", rel="stylesheet")
 		link(href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,900", rel="stylesheet")
 block header
@@ -17,4 +17,4 @@ block main
 block footer
 	include footer/index
 block scripts
-	script(src="/js/bundle.js")
+	script(src="./public/js/bundle.js")
