--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block header
-	h1= message
-	h2= error.status
-	pre #{error.stack}
+	if message 
+		h1= message
+	if error && error.status
+		h2= error.status
+		pre #{error.stack}
