--- a/views/sliderLogo/sliderLogo.pug
+++ b/views/sliderLogo/sliderLogo.pug
@@ -2,12 +2,12 @@
 	.sliderLogo
 		.sliderLogo__container.owl-carousel
 			.sliderLogo__item
-				img(src="/images/assets/logo1.png")
+				img(src="./public/images/assets/logo1.png")
 			.sliderLogo__item
-				img(src="/images/assets/logo2.png")
+				img(src="./public/images/assets/logo2.png")
 			.sliderLogo__item
-				img(src="/images/assets/logo3.png")
+				img(src="./public/images/assets/logo3.png")
 			.sliderLogo__item
-				img(src="/images/assets/logo4.png")
+				img(src="./public/images/assets/logo4.png")
 			.sliderLogo__item
-				img(src="/images/assets/logo4.png")
+				img(src="./public/images/assets/logo4.png")
